--- a/examples/workflows/multiagent_realtime/multi_agent.html
+++ b/examples/workflows/multiagent_realtime/multi_agent.html
@@ -1311,8 +1311,8 @@
             messageDiv.className = "message";
             const time = new Date().toLocaleTimeString();
             messageDiv.innerHTML = `<strong>[${time}] ${sender}:</strong> ${message}`;
-            messagesDiv.appendChild(messageDiv);
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
+            messagesDiv.insertBefore(messageDiv, messagesDiv.firstChild);
+            messagesDiv.scrollTop = 0;
         }
 
         function appendResponseTranscript(agentName, text, agentId) {
@@ -1329,7 +1329,7 @@
                 transcript.element.className = "message";
                 const time = new Date().toLocaleTimeString();
                 transcript.element.innerHTML = `<strong>[${time}] ${agentName}:</strong> <span class="response-transcript-content"></span>`;
-                messagesDiv.appendChild(transcript.element);
+                messagesDiv.insertBefore(transcript.element, messagesDiv.firstChild);
 
                 // Link this message element to the audio queue entry
                 const queueEntry = globalAudioQueue.find(entry => entry.agentId === agentId && !entry.isComplete);
@@ -1347,8 +1347,8 @@
                 contentSpan.textContent = currentResponseTranscripts[agentId].text;
             }
 
-            // Scroll to bottom
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
+            // Scroll to top
+            messagesDiv.scrollTop = 0;
         }
 
         function finishResponseTranscript(agentId) {
