checkpoint: format model

--- a/examples/agent/realtime_voice_agent/chatbot.html
+++ b/examples/agent/realtime_voice_agent/chatbot.html
@@ -857,8 +857,8 @@
                             session_id: sessionId,
                             audio: base64Audio,
                             format: {
-                                sample_rate: 16000,
-                                encoding: "pcm16"
+                                rate: 16000,
+                                type: "audio/pcm",
                             }
                         }));
                     }
