--- a/examples/workflows/multiagent_realtime/multi_agent.html
+++ b/examples/workflows/multiagent_realtime/multi_agent.html
@@ -579,7 +579,7 @@
                 audio: base64Audio,
                 format: {
                     rate: 16000,
-                    encoding: "pcm16"
+                    type: "audio/pcm"
                 }
             }));
 
